# llm-agents-gama

./: .gitignore  README.md
llm-agents/: .envrc.example  .gitignore  api_server.py  backup_helper.py  errors.py  gama_models.py  helper.py  models.py  pyproject.toml  server.py  settings.py  utils.py
llm-agents/api/: __init__.py  application.py  batch.py  handles.py
llm-agents/config/: config_baseline.yaml  config_baseline_1.yaml  config_baseline_50.yaml  config_deepseek-r1-distill-llama-70b.yaml  config_gpt-oss-120b_01.yaml  config_gpt-oss-120b_02_fixed_date.yaml  config_gpt-oss-120b_03_fixed_date.yaml  config_gpt-oss-120b_04_fixed_date_scores_update.yaml  config_gpt-oss-120b_05.yaml  config_gpt-oss-120b_06.yaml  config_gpt-oss-120b_07.yaml  config_gpt-oss-120b_08.yaml  config_gpt-oss-120b_09.yaml  config_gpt-oss-120b_10.yaml  config_gpt-oss-120b_11.yaml  config_gpt-oss-120b_12.yaml  config_gpt-oss-120b_13.yaml  config_gpt-oss-120b_14.yaml  config_gpt-oss-120b_15.yaml  config_gpt-oss-120b_16.yaml  config_gpt-oss-120b_17.yaml  config_gpt-oss-120b_18.yaml  config_gpt-oss-120b_19.yaml  config_gpt4_5.yaml  config_llama-3.3-70b-versatile.yaml  config_llama3_8B_3.yaml  config_mistral7B_50_mem_all.yaml  config_mistral7B_50_no_mem.yaml  config_qwen3-32b_3.yaml  config_qwen3-32b_3__2.yaml  config_qwen_32B_01.yaml
llm-agents/handle/: __init__.py  application.py  websocket.py
llm-agents/llm/: llm_model.py  longterm.py  memory.py  shortterm.py  vllm_server.py
llm-agents/scenarios/: base.py  history.py  llm_config.py
llm-agents/text_helper/: __init__.py  type.py
llm-agents/trip_helper/: __init__.py  base.py  cached_triphelper.py  otp.py  solari.py
llm-agents/world/: __init__.py  (+2 more)
(+100 files in other folders)
