[project]
name = "llm-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Dung Vu",email = "vutrungdungbk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (==0.34.3)",
    "gtfs-kit (>=10.3.1,<11.0.0)",
    "geopandas (==1.1.0)",
    "faker (>=37.4.0,<38.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "humanize (>=4.12.3,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "cachetools (>=6.0.0,<7.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "llama-index (>=0.12.43,<0.13.0)",
    "llama-index-embeddings-huggingface (>=0.5.4,<0.6.0)",
    "llama-index-vector-stores-faiss (>=0.4.0,<0.5.0)",
    "llama-index-llms-ollama (>=0.6.2,<0.7.0)",
    "llama-index-llms-vllm (>=0.5.1,<0.6.0)",
    "llama-index-llms-huggingface (>=0.5.0,<0.6.0)",
    "llama-index-embeddings-ollama (>=0.6.0,<0.7.0)",
    "llama-index-vector-stores-chroma (>=0.4.2,<0.5.0)",
    "asyncio-mqtt (>=0.16.2,<0.17.0)",
    "paho-mqtt (==1.6.1)",
    "vllm (>=0.8,<0.9.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "demjson3 (>=3.0.6,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
